force-app/main/default/objects/LoginDotGov__mdt/LoginDotGov__mdt.object-meta.xml
<CustomObject>
    <description>Metadatatype supporting a Custom Authentication Provider for Login.gov</description>
    <label>LoginDotGov</label>
    <pluralLabel>LoginDogGovs</pluralLabel>
</CustomObject>