force-app/main/default/objects/LoginDotGov__mdt/fields/Access_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Url__c</fullName>
    <description>Token endpoint to exchange the authorization code for an id_token and access_token</description>
    <inlineHelpText>Token endpoint to exchange the authorization code for an id_token and access_token</inlineHelpText>
    <label>Access_Token_Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>