force-app/main/default/objects/LoginDotGov__mdt/fields/acr_values__c.field-meta.xml
<CustomField>
    <fullName>acr_values__c</fullName>
    <description>The Authentication Context Class Reference values used to specify the LOA (level of assurance) of an account, either LOA1 or LOA3. This and the scope determine which user attributes will be available in the user info response. The possible parameter values are:
http://idmanagement.gov/ns/assurance/loa/1
http://idmanagement.gov/ns/assurance/loa/3</description>
    <inlineHelpText>Authentication Context Class Reference specify the level of assurance (LOA)  Options: 
http://idmanagement.gov/ns/assurance/loa/1
http://idmanagement.gov/ns/assurance/loa/3</inlineHelpText>
    <label>acr_values</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>