force-app/main/default/objects/LoginDotGov__mdt/fields/API_User_Url__c.field-meta.xml
<CustomField>
    <fullName>API_User_Url__c</fullName>
    <description>The user info endpoint is used to retrieve user attributes. Clients use the access_token from the token response as a bearer token in the HTTP Authorization header.</description>
    <inlineHelpText>The user info endpoint is used to retrieve user attributes. Clients use the access_token from the token response as a bearer token in the HTTP Authorization header.</inlineHelpText>
    <label>API_User_Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>