force-app/main/default/objects/LoginDotGov__mdt/fields/Authorization_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Endpoint__c</fullName>
    <description>Authorization URL for Login.  e.g https://idp.int.identitysandbox.gov/openid_connect/authorize</description>
    <inlineHelpText>Authorization URL for Login.  e.g https://idp.int.identitysandbox.gov/openid_connect/authorize</inlineHelpText>
    <label>Authorization Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>