force-app/main/default/objects/LoginDotGov__mdt/fields/certificate_name__c.field-meta.xml
<CustomField>
    <fullName>certificate_name__c</fullName>
    <description>Name of the certificate to be used to sign the JWT</description>
    <inlineHelpText>Name of the certificate to be used to sign the JWT.  This should be the same value as the certificate&#39;s Unique Name.</inlineHelpText>
    <label>certificate name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>