force-app/main/default/objects/LoginDotGov__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <description>The unique identifier for the client. This will be registered with the login.gov IdP in advance.</description>
    <inlineHelpText>The unique identifier for the client. This will be registered with the login.gov IdP in advance.</inlineHelpText>
    <label>client_id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>