force-app/main/default/objects/LoginDotGov__mdt/fields/code_challenge__c.field-meta.xml
<CustomField>
    <fullName>code_challenge__c</fullName>
    <description>Only required for PKCE Authentication Method
The URL-safe base64 encoding of the SHA256 digest of a random value generated by the client. The original random value is referred to as the code_verifier and is later used with the token endpoint.</description>
    <inlineHelpText>Only required for PKCE Authentication Method</inlineHelpText>
    <label>code_challenge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>