force-app/main/default/objects/LoginDotGov__mdt/fields/code_challenge_method__c.field-meta.xml
<CustomField>
    <fullName>code_challenge_method__c</fullName>
    <description>Only required for PKCE
This must be S256, the only PKCE code challenge method supported.</description>
    <inlineHelpText>Only required for PKCE
This must be S256, the only PKCE code challenge method supported.</inlineHelpText>
    <label>code_challenge_method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>