force-app/main/default/objects/LoginDotGov__mdt/fields/debug__c.field-meta.xml
<CustomField>
    <fullName>debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to write the custom output to debug logs from Auth Apex Class</description>
    <inlineHelpText>Check to write the custom output to debug logs from Auth Apex Class</inlineHelpText>
    <label>debug</label>
    <type>Checkbox</type>
</CustomField>