force-app/main/default/objects/LoginDotGov__mdt/fields/prompt__c.field-meta.xml
<CustomField>
    <fullName>prompt__c</fullName>
    <description>This can either be select_account (default behavior) or login (force a re-authorization even if a current IdP session is active).</description>
    <inlineHelpText>This can either be select_account (default behavior) or login (force a re-authorization even if a current IdP session is active).</inlineHelpText>
    <label>prompt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>