force-app/main/default/objects/LoginDotGov__mdt/fields/redirect_uri__c.field-meta.xml
<CustomField>
    <fullName>redirect_uri__c</fullName>
    <description>The URI login.gov will redirect to after a successful authorization.</description>
    <inlineHelpText>The URI login.gov will redirect to after a successful authorization.</inlineHelpText>
    <label>redirect_uri</label>
    <required>true</required>
    <type>Url</type>
</CustomField>