force-app/main/default/objects/LoginDotGov__mdt/fields/response_type__c.field-meta.xml
<CustomField>
    <fullName>response_type__c</fullName>
    <defaultValue>&quot;code&quot;</defaultValue>
    <description>This must be code.</description>
    <inlineHelpText>This must be &quot;code&quot;</inlineHelpText>
    <label>response_type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>