force-app/main/default/objects/LoginDotGov__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <defaultValue>&quot;openid email&quot;</defaultValue>
    <description>A space-separated string of the scopes being requested. The authorization page will display the list of attributes being requested from the user. Applications should aim to request the fewest user attributes and smallest scope needed. Possible values are: openid, address, email, phone, profile:birthdate, profile:name, profile, and social_security_number</description>
    <inlineHelpText>A space-separated string of the scopes being requested. The authorization page will display the list of attributes being requested from the user. Applications should aim to request the fewest user attributes and smallest scope needed. Possible values are:</inlineHelpText>
    <label>scope</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>