force-app/main/default/objects/LoginDotGov__mdt/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <defaultValue>&quot;$STATE_REPLACE&quot;</defaultValue>
    <description>A unique value at least 32 characters in length used for maintaining state between the request and the callback. This value will be returned to the client on a successful authorization.</description>
    <inlineHelpText>A unique value at least 32 characters in length used for maintaining state between the request and the callback. This value will be returned to the client on a successful authorization.</inlineHelpText>
    <label>state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>